created html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <title>pagm - Web Dev</title>
 </head>
 <body>
-    
+    <!-- MERN Stack apps -->
+    <h2>MERN Stack Applications</h2>
+
+    <p>Personalized Stretching App</p>
+    <p>The purpose of this applitcation is to provide a way for physical therapists to create customized routines 
+        for their patients. A patient can register to the application by completing a series of questions and 
+        based on these responses the therapist builds the routine.
+    </p>
+    <a href="https://personalized-stretching-app.netlify.app" target="_blank">personalized-stretching-app</a>
+    <br/>
+    <p>Pintok</p>
+    <p>For the past two years TikTok has revolutionazed the social media game. We've learned recepies, dances,
+        travel hacks, book recommendations, etc. However, where are all of these videos? TikTok has yet to provide
+        a way to organize all of its great content. That is what Pintok is all about... create your own categories to 
+        organize your favorite videos and see what other users have created! Have fun!
+    </p>
+    <a href="https://pintok.netlify.app" target="_blank">pintok</a>
+  
+     <!-- Vanilla JS  -->
+     <h2>JavaScript, HTML, CSS</h2>
+    <p>One piece at a time...</p>
+    <p>Built with vanilla JS take your mind off while building a jigsaw puzzle </p>
+    <a href="https://paolaagarmun.github.io/jigsaw-puzzle/" target="_blank">one piece at a time</a>
+
+      <!-- Canvas -->
+    <h2>JavaScript Canvas</h2>
+    <p>Puerto Rico</p>
+    <p>Enjoy a series of art and an animated canvas game all related to my home country, Puerto Rico</p>
 </body>
 </html>
