working on tech stack section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
+    <script src="https://kit.fontawesome.com/7f56c49043.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
         </style>
@@ -30,6 +32,16 @@
                     for their patients. A patient can register to the application by completing a series of questions and 
                     based on these responses the therapist builds the routine.
                 </p>
+                <br/>
+                <article class="techstack">
+                    <h4>Tech Stack:</h4>
+                    <ul class="techstack-list">
+                        <li class="techstack-list-item"><i class="fa-brands fa-react"></i></li>
+                        <li class="techstack-list-item"><i class="fa-brands fa-node"></i></li>
+                        <li class="techstack-list-item"><span class="iconify" data-icon="simple-icons:mongodb"></span></li>
+                        <li class="techstack-list-item"><span class="iconify" data-icon="logos:express"></span></li>
+                    </ul>
+                </article>
             </div>
             <div class="project-image">
                 <a href="https://personalized-stretching-app.netlify.app" target="_blank"><img src="./images/personalized-stretching.png" alt="xyz" ></a>
@@ -73,7 +85,7 @@
           <!-- Canvas -->
         <h2>JavaScript Canvas</h2>
         <p>Puerto Rico</p>
-        <p>Enjoy a series of art and an animated canvas game all related to my home country, Puerto Rico</p>
+        <p>Enjoy a series of art and an animated canvas game all dedicated to my home country, Puerto Rico</p>
     </div>
   
 
